# dergipark-mcp

./: .gitignore  QUALITY_UPGRADE_PROMPT.md  README.en.md  README.md  claude_desktop_config.example.json  main.py  pyproject.toml
.github/workflows/: ci.yml
packaging/: README.md  build_binary.sh  dergipark_mcp.spec  launcher.py  manifest.binary.json  manifest.json
packaging/hf/: Dockerfile  README.md
scripts/: build_directory.py  build_index.py
src/dergipark_mcp/: __init__.py  cache.py  citations.py  directory.py  http.py  index.py  oai.py  pdf.py  prompts.py  server.py  site.py
tests/: conftest.py  test_cache.py  test_citations.py  test_directory.py  test_http.py  test_index.py  test_live.py  test_oai_parse.py  test_prompts.py  test_search_all_journals.py  test_server.py  test_site_pdf.py
tests/fixtures/: article.html  article_rich.html  getrecord.xml  getrecord_mods.xml  getrecord_mods_multi.xml  journal_page.html  journals_dir.html
