[project]
name = "dergipark-mcp"
version = "0.3.4"
description = "DergiPark (Turkish academic journals) için Model Context Protocol (MCP) sunucusu — OAI-PMH tabanlı, robots-uyumlu, CAPTCHA'sız."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "muctebadikmen" }]
keywords = ["mcp", "dergipark", "oai-pmh", "academic", "turkish", "llm"]

dependencies = [
    "fastmcp>=3.4",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pypdf>=4.2",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dergipark-mcp = "dergipark_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dergipark_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/dergipark_mcp/data/journals.json" = "dergipark_mcp/data/journals.json"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: ağ erişimi gerektiren canlı entegrasyon testleri (deselect: -m 'not live')",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["src/dergipark_mcp/data"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]
